--- a/user_account.css
+++ b/user_account.css
@@ -48,21 +48,20 @@ body {
     width: 100%;
     height: 100%;
 }
-.user-pic-container div:last-child{ /*edit button*/
-    background:rgba(10, 36, 99, 0.8) ;
+.edit_profile { /*button to edit profile*/
+    background: rgba(10, 36, 99, 0.8);
+    border: none;
+    width: 200px;
+    height: 30px;
+    border-radius: 10px;
     color: white;
-    padding: 8px 16px; 
-    font-size: 0.875rem;
     font-weight: 500;
     cursor: pointer;
     transition: all 0.3s ease;
-    border: none;
-    border-radius: 20px;
-    padding-left: 60px;
 }
-.user-pic-container div:last-child:hover { /*for edit button */
+.edit_profile:hover {
     background: rgba(30, 58, 138, 0.8);
-    transform: translateY(-2px);
+    transform: translateY(-2px)
 }
 
 .user-info-container { /*for the username and user email*/
