updated login and signup

--- a/Pages/log-in.cshtml
+++ b/Pages/log-in.cshtml
@@ -30,7 +30,7 @@
         
         <form>
             <div class="form-group">
-                <input type="text" class="form-input" placeholder="Email / Username" required>
+                <input type="email" class="form-input" placeholder="Email" required>
             </div>
             
             <div class="form-group">
